Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14568

Server does not shut down with SIGTERM after installing Spider 3.3 plugin

    XMLWordPrintable

Details

    Description

      Problem: After installing the spider plugin I tried to shut the server down and it just stuck.

      • Compiled from source on CentOS 7
      • installed into /usr/local/mysql via make install.
      • I ran a clean setup into an empty datadir. /usr/local/mysql/scripts/mysql_install_db --user=mysql --datadir=/path/to/datadir
      • Started mysqld with /usr/local/mysql/bin/mysqld --defaults-file=/etc/my.cnf --user=mysql
      • I installed the spider plugin with: mysql < /usr/local/mysql/share//install_spider.sql
      • I tried to stop the server with KILL -TERM to mysqld process

      Logging from server shows:

      2017-12-04 16:13:54 0 [Note] Got signal 15 to shutdown mysqld
      2017-12-04 16:13:54 0 [Note] /usr/local/mysql/bin/mysqld (unknown): Normal shutdown
       
      2017-12-04 16:13:54 0 [Note] InnoDB: FTS optimize thread exiting.
      2017-12-04 16:13:54 0 [Note] Event Scheduler: Killing the scheduler thread, thread id 6
      2017-12-04 16:13:54 0 [Note] Event Scheduler: Waiting for the scheduler thread to reply
      2017-12-04 16:13:54 0 [Note] Event Scheduler: Stopped
      2017-12-04 16:13:54 0 [Note] Event Scheduler: Purging the queue. 0 events
      2017-12-04 16:15:43 0 [Note] Got signal 15 to shutdown mysqld
      2017-12-04 16:16:03 0 [Note] Got signal 15 to shutdown mysqld
      2017-12-04 16:16:05 0 [Note] Got signal 15 to shutdown mysqld
      

      but it does not shutdown.

      There is no specific spider configuration (yet).

      Build is from commit: 60c446584c614f19f9 in branch 10.3

      My expectation is that mysqld would close down cleanly and stop.

      Attachments

        Issue Links

          Activity

            People

              jacob-mathew Jacob Mathew (Inactive)
              sjmudd Simon Mudd
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.5d
                  3.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.