MDEV-14568: Server does not shut down with SIGTERM after installing             Spider 3.3 plugin

- Server shutdown hangs when it waits for the new Spider 3.3 table
  background threads to stop despite being unable to signal them to stop

- Changed the way that the new Spider 3.3 table background threads are
  created in order to enable server shutdown to signal them to stop